--- a/ansible/roles/codeready_containers_hacks/tasks/configure-oc-cli.yml
+++ b/ansible/roles/codeready_containers_hacks/tasks/configure-oc-cli.yml
@@ -6,7 +6,7 @@
 
 - name: Extract ocp client  into /usr/local/bin/oc
   unarchive:
-    src: "{{ codeready_containers_hacks_ocp4_release_url }}/{{ codeready_containers_hacks_ocp4_client }}"
+    src: "{{ codeready_containers_hacks_ocp4_release_url }}{{ codeready_containers_hacks_ocp4_client }}"
     dest: /usr/local/bin
     remote_src: yes
   become: true
